fix style of edit button on the dark mode

--- a/todo-angular/src/app/components/edit-todo/edit-todo.component.scss
+++ b/todo-angular/src/app/components/edit-todo/edit-todo.component.scss
@@ -25,12 +25,14 @@
 
 .menu-button-dark {
   background: none;
+ &:hover{
+   .white-icon {
+     color: c.colors(bg,true);
+     & svg {
+       fill: c.colors(bg,true);
+     }
+   }
+ }
 
-  & .white-icon {
-    color: c.colors(bg-c);
-    & svg {
-      fill: c.colors(bg-c);
-    }
-  }
   color: c.colors(font, true);
 }
